@@ -2,11 +2,11 @@ Package: gCMAP
 Type: Package
 Title: Tools for Connectivity Map-like analyses
 Version: 1.11.3
-Date: 2014-11-06
-Depends: GSEABase, limma (>= 3.15.14)
-Imports: Biobase, BiocGenerics, methods, GSEAlm, Category, Matrix (>=
-        1.0.9), parallel, annotate, genefilter, AnnotationDbi
-Suggests: DESeq, KEGG.db, reactome.db, RUnit, GO.db, mgsa
+Date: 2015-02-25
+Depends: GSEABase, limma (>= 3.20.0)
+Imports: Biobase, methods, GSEAlm, Category, Matrix (>=
+        1.0.9), parallel, annotate, genefilter, AnnotationDbi, DESeq
+Suggests: KEGG.db, reactome.db, RUnit, GO.db, mgsa
 Enhances: bigmemory, bigmemoryExtras (>= 1.1.2)
 Author: Thomas Sandmann <sandmann.thomas@gene.com>, Richard Bourgon
         <bourgon.richard@gene.com> and Sarah Kummerfeld
