@@ -2,7 +2,7 @@ setMethod(
   "geneIndex",
   signature( gene.sets = "GeneSet", gene.ids = "character"),
   function( gene.sets, gene.ids, remove.empty=TRUE ) {
-    unlist(.map2indices(list(geneIds(gene.sets)), gene.ids, remove.empty=remove.empty))
+    unlist(limma::ids2indices(list(geneIds(gene.sets)), gene.ids, remove.empty=remove.empty))
   }
 )
 
@@ -10,7 +10,7 @@ setMethod(
   "geneIndex",
   signature( gene.sets = "GeneSetCollection", gene.ids = "character"),
   function( gene.sets, gene.ids, remove.empty=TRUE ) {
-    .map2indices(geneIds(gene.sets), gene.ids, remove.empty=remove.empty)
+    limma::ids2indices(geneIds(gene.sets), gene.ids, remove.empty=remove.empty)
   }
 )
 
@@ -18,14 +18,6 @@ setMethod(
   "geneIndex",
   signature( gene.sets = "CMAPCollection", gene.ids = "character"),
   function( gene.sets, gene.ids, remove.empty=TRUE ) {
-    .map2indices(geneIds(gene.sets), gene.ids, remove.empty=remove.empty)
+    limma::ids2indices(geneIds(gene.sets), gene.ids, remove.empty=remove.empty)
   }
 )
-
-.map2indices <- function(...){
-  if( packageVersion("limma") >= "3.20.0"){
-    ids2indices(...)
-  } else {
-    symbols2indices(...)
-  }
-}
